export const html = `
<section class="tab-panel" id="panel-limpiar-exif">
                <div class="panel-header">
                    <h2>Limpiar Metadatos EXIF (Privacidad)</h2>
                    <p>Elimina la información oculta, ubicación GPS y datos de cámara de tus fotos para proteger tu
                        privacidad.</p>
                </div>

                <div class="dropzone" id="dropzone-limpiar-exif">
                    <input type="file" id="file-limpiar-exif" accept="image/jpeg, image/png" class="file-input">
...
