export const html = `
<section class="tab-panel" id="panel-privacidad">
                <div class="panel-header">
                    <h2>Privacidad y Seguridad</h2>
                    <p>Descubre por qué tus archivos y tu privacidad están 100% garantizados en Convert2.</p>
                </div>

                <div class="privacy-info-card">
                    <div class="privacy-badge">
                        <i class="fa-solid fa-shield-halved"></i>
...
